# chatgpt-lean4-plugin

./: LICENSE  pyproject.toml
chatgpt_lean4_plugin/: lean4_client.py  main.py  openapi.yaml
chatgpt_lean4_plugin/.well-known/: ai-plugin.json
